<resources>
    <string name="app_name">Top Stories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head_line_fragment">Top Stories</string>
    <string name="book_mark_fragment">Bookmarks</string>
    <string name="preferred_fragment">All</string>
    <string name="feeds_fragment">Feeds</string>
    <string name="bookmarked_fragment">BookMarked</string>
    <string name="top_headlines_preference_title">Preferences for Top Headline News</string>
    <string name="sources_preference_title">Preferences for Sources</string>
    <string name="everything_preference_title">Preferred Preference</string>
    <string name="pref_source_label">Sources</string>
    <string name="pref_sources_label_all">None</string>
    <string name="pref_sources_all_value" translatable="false"></string>
    <string name="pref_sources_label_abc_news">ABC News(US)</string>
    <string name="pref_sources_abc_news_value">abc-news</string>
    <string name="pref_sources_label_abc_news_au">ABC News(AU)</string>
    <string name="pref_sources_abc_news_au_value">abc-news-au</string>
    <string name="pref_sources_label_al_jazeera_english">Al Jazeera English(US)</string>
    <string name="pref_sources_al_jazeera_english_value">al-jazeera-english</string>
    <string name="pref_sources_label_ars_technica">Ars Technica(US)</string>
    <string name="pref_sources_ars_technica_value">ars-technica</string>
    <string name="pref_sources_label_associated_press">Associated Press(US)</string>
    <string name="pref_sources_associated_press_value">associated-press</string>
    <string name="pref_sources_label_australian_financial_review">Australian Financial Review(AU)</string>
    <string name="pref_sources_australian_financial_review_value">australian-financial-review</string>
    <string name="pref_sources_label_axios">Axios(US)</string>
    <string name="pref_sources_axios_value">axios</string>
    <string name="pref_sources_label_bbc_news">BBC News(UK)</string>
    <string name="pref_sources_bbc_news_value">bbc-news</string>
    <string name="pref_sources_label_bbc_sport">BBC Sport(UK)</string>
    <string name="pref_sources_bbc_sport_value">bbc-sport</string>
    <string name="pref_sources_label_bleacher_report">Bleacher Report(US)</string>
    <string name="pref_sources_bleacher_report_value">bleacher-report</string>
    <string name="pref_sources_label_bloomberg">Bloomberg(US)</string>
    <string name="pref_sources_bloomberg_value">bloomberg</string>
    <string name="pref_sources_label_breitbart_news">Breitbart News(US)</string>
    <string name="pref_sources_breitbart_news_value">breitbart-news</string>
    <string name="pref_sources_label_business_insider">Business Insider(US)</string>
    <string name="pref_sources_business_insider_value">business-insider</string>
    <string name="pref_sources_label_business_insider_uk">Business Insider(UK)</string>
    <string name="pref_sources_business_insider_uk_value">business-insider-uk</string>
    <string name="pref_sources_label_buzz_feed">Buzzfeed(US)</string>
    <string name="pref_sources_buzz_feed_value">buzzfeed</string>
    <string name="pref_sources_label_cbc_news_ca">CBC News(CA)</string>
    <string name="pref_sources_cbc_news_ca_value">cbc-news</string>
    <string name="pref_sources_label_cbc_news">CBS News(US)</string>
    <string name="pref_sources_cbc_news_value">cbs-news</string>
    <string name="pref_sources_label_cnbc">CNBC(US)</string>
    <string name="pref_sources_cnbc_value">cnbc</string>
    <string name="pref_sources_label_cnn">CNN(US)</string>
    <string name="pref_sources_cnn_value">cnn</string>
    <string name="pref_sources_label_crypto_coins_news">Crypto Coins News(US)</string>
    <string name="pref_sources_crypto_coins_news_value">crypto-coins-news</string>
    <string name="pref_sources_label_daily_mail">Daily Mail(UK)</string>
    <string name="pref_sources_daily_mail_value">daily-mail</string>
    <string name="pref_sources_label_engadget">Engadget(US)</string>
    <string name="pref_sources_engadget_value">engadget</string>
    <string name="pref_sources_label_entertainment_weekly">Entertainment Weekly(US)</string>
    <string name="pref_sources_entertainment_weekly_value">entertainment-weekly</string>
    <string name="pref_sources_label_espn">ESPN(US)</string>
    <string name="pref_sources_espn_value">espn</string>
    <string name="pref_sources_label_espn_cric_info">ESPN Cric Info(US)</string>
    <string name="pref_sources_espn_cric_info_value">espn-cric-info</string>
    <string name="pref_sources_label_financial_post">Financial Post(CA)</string>
    <string name="pref_sources_financial_post_value">financial-post</string>
    <string name="pref_sources_label_financial_times">Financial Times(UK)</string>
    <string name="pref_sources_financial_times_value">financial-times</string>
    <string name="pref_sources_label_football_italia">Football Italia(IT)</string>
    <string name="pref_sources_football_italia_value">football-italia</string>
    <string name="pref_sources_label_fortune">Fortune(US)</string>
    <string name="pref_sources_fortune_value">fortune</string>
    <string name="pref_sources_label_four_four_two">FourFourTwo(US)</string>
    <string name="pref_sources_four_four_two_value">four-four-two</string>
    <string name="pref_sources_label_fox_news">Fox News(US)</string>
    <string name="pref_sources_fox_news_value">fox-news</string>
    <string name="pref_sources_label_fox_sports">Fox Sports(US)</string>
    <string name="pref_sources_fox_sports_value">fox-sports</string>
    <string name="pref_sources_label_google_news">Google News(US)</string>
    <string name="pref_sources_google_news_value">google-news</string>
    <string name="pref_sources_label_google_news_au">Google News(Australia)(AU)</string>
    <string name="pref_sources_google_news_au_value">google-news-au</string>
    <string name="pref_sources_label_google_news_ca">Google News(Canada)(CA)</string>
    <string name="pref_sources_google_news_ca_value">google-news-ca</string>
    <string name="pref_sources_label_google_news_in">Google News(India)(IN)</string>
    <string name="pref_sources_google_news_in_value">google-news-in</string>
    <string name="pref_sources_label_google_news_uk">Google News(UK)</string>
    <string name="pref_sources_google_news_uk_value">google-news-uk</string>
    <string name="pref_sources_label_hacker_news">Hacker News(US)</string>
    <string name="pref_sources_hacker_news_value">hacker-news</string>
    <string name="pref_sources_label_ign">IGN(US)</string>
    <string name="pref_sources_ign_value">ign</string>
    <string name="pref_sources_label_independent">Independent(GB)</string>
    <string name="pref_sources_independent_value">independent</string>
    <string name="pref_sources_label_mashable">Mashable(US)</string>
    <string name="pref_sources_mashable_value">mashable</string>
    <string name="pref_sources_label_medical_news_today">Medical News Today(US)</string>
    <string name="pref_sources_medical_news_today_value">medical-news-today</string>
    <string name="pref_sources_label_metro">Metro(GB)</string>
    <string name="pref_sources_metro_value">metro</string>
    <string name="pref_sources_label_mirror">Mirror(UK)</string>
    <string name="pref_sources_mirror_value">mirror</string>
    <string name="pref_sources_label_msnbc">MSNBC(US)</string>
    <string name="pref_sources_msnbc_value">msnbc</string>
    <string name="pref_sources_label_mtv_news">MTV News(US)</string>
    <string name="pref_sources_mtv_news_value">mtv-news</string>
    <string name="pref_sources_label_mtv_news_uk">MTV News(UK)</string>
    <string name="pref_sources_mtv_news_uk_value">mtv-news-uk</string>
    <string name="pref_sources_label_national_geopraphic">National Geographic(US)</string>
    <string name="pref_sources_national_geopraphic_value">national-geographic</string>
    <string name="pref_sources_label_national_review">National Review(US)</string>
    <string name="pref_sources_national_review_value">national-review</string>
    <string name="pref_sources_label_nbc_news">NBC News(US)</string>
    <string name="pref_sources_nbc_news_value">nbc-news</string>
    <string name="pref_sources_label_news24">News24(ZA)</string>
    <string name="pref_sources_news24_value">news24</string>
    <string name="pref_sources_label_new_scientist">New Scientist(US)</string>
    <string name="pref_sources_new_scientist_value">new-scientist</string>
    <string name="pref_sources_label_news_com_au">News.com.au(AU)</string>
    <string name="pref_sources_news_com_au_value">news-com-au</string>
    <string name="pref_sources_label_newsweek">Newsweek(US)</string>
    <string name="pref_sources_newsweek_value">newsweek</string>
    <string name="pref_sources_label_new_york_magazine">New York Magazine(US)</string>
    <string name="pref_sources_new_york_magazine_value">new-york-magazine</string>
    <string name="pref_sources_label_next_big_future">Next Big Future(US)</string>
    <string name="pref_sources_next_big_future_value">next-big-future</string>
    <string name="pref_sources_label_nfl_news">NFL News(US)</string>
    <string name="pref_sources_nfl_news_value">nfl-news</string>
    <string name="pref_sources_label_nhl_news">NHL News(US)</string>
    <string name="pref_sources_nhl_news_value">nhl-news</string>
    <string name="pref_sources_label_politico">Politico(US)</string>
    <string name="pref_sources_politico_value">politico</string>
    <string name="pref_sources_label_polygon">Polygon(US)</string>
    <string name="pref_sources_polygon_value">polygon</string>
    <string name="pref_sources_label_recode">Recode(US)</string>
    <string name="pref_sources_recode_value">recode</string>
    <string name="pref_sources_label_reddit">Reddit /r/all(US)</string>
    <string name="pref_sources_reddit_value">reddit-r-all</string>
    <string name="pref_sources_label_reuters">Reuters(US)</string>
    <string name="pref_sources_reuters_value">reuters</string>
    <string name="pref_sources_label_rte">RTE(IE)</string>
    <string name="pref_sources_rte_value">rte</string>
    <string name="pref_sources_label_talksport">TalkSport(UK)</string>
    <string name="pref_sources_talksport_value">talksport</string>
    <string name="pref_sources_label_techcrunch">TechCrunch(US)</string>
    <string name="pref_sources_techcrunch_value">techcrunch</string>
    <string name="pref_sources_label_techradar">TechRadar(US)</string>
    <string name="pref_sources_techradar_value">techradar</string>
    <string name="pref_sources_label_the_american_conservative">The American Conservative(US)</string>
    <string name="pref_sources_the_american_conservative_value">the-american-conservative</string>
    <string name="pref_sources_label_the_economist">The Economist(UK)</string>
    <string name="pref_sources_the_economist_value">the-economist</string>
    <string name="pref_sources_label_the_globe_and_mail">The Globe And Mail(CA)</string>
    <string name="pref_source_key" translatable="false">top-headlines-source</string>
    <string name="pref_everything_sort_by_label">Sort by</string>
    <string name="pref_everything_sort_by_label_all">None</string>
    <string name="pref_everything_sort_by_all_value" translatable="false"></string>
    <string name="pref_everything_sort_by_key" translatable="false">sort-by</string>
    <string name="pref_skin_title">Themes</string>
    <string name="pref_theme_key">theme-key</string>
    <string name="pref_theme_true_value">0</string>
    <string name="country_key">country-key</string>
    <string name="country_label">Country</string>
    <string name="country_label_all">None</string>
    <string name="us">us</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="read_full_article">Full Article</string>
    <string name="delete">Delete</string>
</resources>