<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <LinearLayout
      android:id="@+id/actionBottomSheet"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/backgroundcolor"
      android:orientation="vertical"
      android:padding="@dimen/twentyDP"
      app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
      tools:context=".ui.bottom_sheets.ActionBottomSheetFragment"

      >

    <TextView
        android:id="@+id/fullArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyDP"
        android:layout_marginEnd="@dimen/twentyDP"
        android:layout_weight="2"
        android:drawableStart="@mipmap/ic_scripts"
        android:drawablePadding="@dimen/thirtyDP"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/twentyDP"
        android:text="@string/read_full_article"
        android:textAlignment="center"
        android:textColor="?attr/tintcolor"
        android:textSize="@dimen/twentyySP" />

    <TextView
        android:id="@+id/shareArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyDP"
        android:layout_marginEnd="@dimen/twentyDP"
        android:layout_weight="2"
        android:drawableStart="@mipmap/ic_share"
        android:drawablePadding="@dimen/thirtyDP"
        android:gravity="center"
        android:paddingTop="@dimen/twentyDP"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="?attr/tintcolor"
        android:textSize="@dimen/twentyySP" />

    <TextView
        android:id="@+id/bookMarkArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyDP"
        android:layout_marginEnd="@dimen/twentyDP"
        android:layout_weight="2"
        android:drawableStart="@mipmap/ic_bookmark"
        android:drawablePadding="@dimen/thirtyDP"
        android:gravity="center"
        android:paddingTop="@dimen/twentyDP"
        android:text="@string/bookmark"
        android:textAlignment="center"
        android:textColor="?attr/tintcolor"
        android:textSize="@dimen/twentyySP" />

    <TextView
        android:id="@+id/deleteBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyDP"
        android:layout_marginEnd="@dimen/twentyDP"
        android:layout_weight="2"
        android:drawableStart="@mipmap/ic_delete"
        android:drawablePadding="@dimen/thirtyDP"
        android:gravity="center"
        android:paddingTop="@dimen/twentyDP"
        android:text="@string/delete"
        android:textAlignment="center"
        android:textColor="?attr/tintcolor"
        android:textSize="@dimen/twentyySP" />

  </LinearLayout>

</layout>
